<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cl.tanmeza.fonocoptero.QuadcopterActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:id="@+id/RelativeLayout01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:id="@+id/layout_sensores"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/paso_1_titulo"
            android:id="@+id/sensores_titulo" />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paso_1_boton"
            android:id="@+id/sensores_button"
            android:background="@drawable/buttons_green"
            android:textColor="@drawable/buttons_text_color"
            android:checked="false" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/paso_1_instruccion"
            android:id="@+id/sensores_text" />
    </LinearLayout>
    <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#2a2c38"
    android:id="@+id/view_sensores"
    android:layout_below="@+id/layout_sensores"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
        android:layout_margin="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_sensores"
        android:layout_alignParentLeft="true"
        android:id="@+id/layout_armado"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/paso_2_titulo"
            android:id="@+id/armado_titulo"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paso_2_boton"
            android:id="@+id/armado_button"
            android:background="@drawable/buttons_green"
            android:textColor="@drawable/buttons_text_color"
            android:enabled="false" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_container_2"
            android:gravity="center_horizontal"
            android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/paso_2_quedan"
            android:id="@+id/paso_2_quedan" />

        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/paso_2_chronometer"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/paso_2_quedan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/paso_2_segundos"
            android:id="@+id/paso_2_segundos"
            android:layout_toRightOf="@id/paso_2_chronometer"
            />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/paso_2_instruccion"
            android:id="@+id/armado_text"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2a2c38"
        android:id="@+id/view_armado"
        android:layout_below="@+id/layout_armado"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:weightSum="1.0"
        android:layout_below="@+id/view_armado"
        android:id="@+id/linearLayout_3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/paso_3_titulo"
            android:id="@+id/textView_paso3_titulo"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_container_4"
            android:gravity="center_horizontal"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/paso_3_comenzara"
                android:id="@+id/paso_3_comenzara" />

            <Chronometer
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/paso_3_chronometer"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/paso_3_comenzara" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/paso_3_segundos"
                android:id="@+id/paso_3_segundos"
                android:layout_toRightOf="@id/paso_3_chronometer"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/layout_container_3">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/paso_3_comenzar"
                android:id="@+id/botonComenzar"
                android:enabled="false"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="false"
                android:background="@drawable/buttons_green"
                android:textColor="@drawable/buttons_text_color"
                android:layout_alignWithParentIfMissing="false" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/paso_3_detener"
                android:id="@+id/botonDetener"
                android:enabled="false"
                android:layout_below="@+id/botonComenzar"
                android:background="@drawable/buttons_red"
                android:layout_centerHorizontal="true"
                android:textColor="@drawable/buttons_text_color"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp" />


        </RelativeLayout>

    </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        style="?android:attr/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paso_3_salir"
        android:id="@+id/botonSalir"
        android:enabled="true"
        android:background="@drawable/buttons_blue"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ScrollView01"
        android:layout_alignEnd="@+id/ScrollView01"
        android:textColor="@drawable/buttons_text_color"/>


</RelativeLayout>